<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editable_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/course_title_hint"
        android:layout_below="@id/course_title"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/course_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/editable_course_title"
        android:text="@string/course_destination" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/locationBtn"
        style="@style/ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_destination"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/change_start"
        android:text="@string/select_location" />

    <EditText
        android:id="@+id/course_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_note_hint"
        android:layout_below="@id/locationBtn"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/save_button_desc"
        style="@style/FAB"/>


</RelativeLayout>