<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/prt_background"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/main_menu"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF000000"
                android:text="@string/to_main"/>

            <Button
                android:id="@+id/destBtn"
                android:contentDescription="@string/change_dest"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textColorHint="#CCFFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF000000"
                android:text="@string/from_main" />

            <Button
                android:id="@+id/startBtn"
                android:contentDescription="@string/change_start"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location"
                android:textColor="#FFFFFFFF"
                android:textColorHint="#CCFFFFFF" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/departure_time"
                    android:textColor="#FF000000"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/useCurrentTimeCB"
                    android:contentDescription="@string/current_time_bool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/current_time"
                    android:textColor="#FF000000" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/timeBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:contentDescription="@string/change_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:color="#CC000000"
                    android:text="@string/current_time"
                    android:textColor="#FFFFFFFF"
                    android:textColorHint="#CCFFFFFF"/>

                <Button
                    android:id="@+id/dateBtn"
                    android:contentDescription="@string/change_date"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:color="#CC000000"
                    android:text="@string/current_day"
                    android:textColor="#FFFFFFFF"
                    android:textColorHint="#CCFFFFFF"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/prtStatusBtn"
            android:contentDescription="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTop="@mipmap/prt_icon"
            android:text="@string/prt_status"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/layout_container"
            android:layout_alignEnd="@+id/layout_container"
            android:layout_alignStart="@+id/layout_container"
            android:elevation="10dp"/>
        <TextView
            android:id="@+id/prt_badge"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/prtStatusBtn"
            android:layout_alignStart="@+id/prtStatusBtn"
            android:layout_alignTop="@+id/prtStatusBtn"
            android:paddingTop="20dp"
            android:background="@drawable/rounded_bar_green"
            android:elevation="10dp"/>
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/continueBtn"
        android:contentDescription="@string/send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@mipmap/continue_arrow"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@android:color/white"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="2dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/courseBtn"
        android:contentDescription="@string/send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@mipmap/schedule_icon"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@android:color/white"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart= "true"
        android:elevation="2dp"/>


</RelativeLayout>